<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, ParseStarterProjectActivity!</string>
    <string name="app_name">ParseStarterProject</string>
    <string name="button_upload">Upload</string>
    <string name="button_fetch">Fetch</string>
    <string name="button_upload_images">Images</string>
    <string name="button_fetch_images">Fetch Images</string>
</resources>
