<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_upload"
        android:id="@+id/button_upload"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/common_margin"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_fetch"
        android:id="@+id/button_fetch"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/common_margin"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_upload_images"
        android:id="@+id/button_upload_images"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/common_margin"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_fetch_images"
        android:id="@+id/button_fetch_images"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/common_margin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/textView"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/common_margin"/>
    </ScrollView>

</LinearLayout>